[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/images/menu.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/MenuContest.gd" type="Script" id=2]

[node name="MenuContest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Control" parent="."]
margin_left = 619.563
margin_top = 132.0
margin_right = 951.563
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="VBoxContainer" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Dialog/Item"]
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
align = 1
valign = 1

[node name="Description" type="Label" parent="Dialog/Item"]
margin_top = 37.0
margin_right = 332.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 32 )
align = 1
valign = 1

[node name="Price" type="Label" parent="Dialog/Item"]
margin_top = 74.0
margin_right = 332.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 32 )
align = 1
valign = 1

[node name="Dialog" type="VBoxContainer" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="Label" parent="Dialog/Dialog"]
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 70.0
margin_right = 500.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 440.0
margin_bottom = 480.0
color = Color( 0.266667, 0.392157, 0.411765, 0.831373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 440.0
margin_bottom = 480.0
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10

[node name="Control" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 410.0
margin_bottom = 470.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control"]
margin_right = 380.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Control/HBoxContainer2"]
margin_right = 344.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
text = "contest_menu_title"
align = 1
valign = 1

[node name="Close" type="Button" parent="MarginContainer/CenterContainer/Control/HBoxContainer2"]
margin_left = 348.0
margin_top = 8.0
margin_right = 380.0
margin_bottom = 40.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
flat = true

[node name="Close" type="Sprite" parent="MarginContainer/CenterContainer/Control/HBoxContainer2/Close"]
modulate = Color( 0.882353, 0.415686, 0.415686, 1 )
position = Vector2( 16, 16 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 97.2634, 13.194, 39.816, 41.5224 )

[node name="Control" type="Control" parent="MarginContainer/CenterContainer/Control"]
margin_top = 52.0
margin_right = 380.0
margin_bottom = 392.0
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/CenterContainer/Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
color = Color( 0.552941, 0.552941, 0.552941, 0.337255 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="ScrollContainer" parent="MarginContainer/CenterContainer/Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="ContestList" type="VBoxContainer" parent="MarginContainer/CenterContainer/Control/Control/MarginContainer"]
margin_right = 380.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/Control"]
margin_top = 396.0
margin_right = 380.0
margin_bottom = 460.0
rect_min_size = Vector2( 0, 64 )
alignment = 1

[node name="EnterContest" type="Button" parent="MarginContainer/CenterContainer/Control/HBoxContainer"]
margin_left = 118.0
margin_top = 16.0
margin_right = 261.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 4
disabled = true
text = "contest_menu_enter"
flat = true

[connection signal="pressed" from="MarginContainer/CenterContainer/Control/HBoxContainer2/Close" to="." method="_on_Close_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Control/HBoxContainer/EnterContest" to="." method="_on_EnterContest_pressed"]
